# victim_search_algorithm

./: .gitignore  README.md
building_map/: CMakeLists.txt  package.xml
building_map/launch/: cleaning_map.launch  gazebo_robot.launch  map_loader.launch  map_saver.launch
building_map/maps/: cleaned_map.pgm  cleaned_map.yaml  cleaned_map_1409.pgm  cleaned_map_1409.yaml  cleaned_map_1410.pgm  cleaned_map_1410.yaml  cleaned_map_1410_2.yaml  map.pgm  map_1409.pgm  map_1409.yaml  map_1410.pgm  map_1410.yaml  map_1410_2.pgm  map_1410_2.yaml
building_map/src/: map_cleaner_node.cpp  map_transfer_node.cpp
building_map/srv/: CleanedMap.srv
building_map/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
building_map/urdf/sensors/: stereo_camera.urdf.xacro  wge100_camera.urdf.xacro
hum_det/: CMakeLists.txt  package.xml
hum_det/launch/: avs_main.launch  engineer_stereo.launch  exper_nodes.launch  img_view.launch  img_view_rviz.launch  run_usb_cam.launch  stereo_img_proc.launch  usb_cam.launch
hum_det/msg/: Det.msg  DetArray.msg
hum_det/resources/engineer/camera_info/: left.yaml  right.yaml
hum_det/rviz/: three_imgs_vertical.rviz
hum_det/scripts/: det_class.py  det_img_group_node.py  det_stereo_sub_node.py  do_color.py  do_color_node.py  first_sub.py  improve_img.py  improve_img_node.py  scaled_yolov4_csp_node.py  second_sub.py  srv_client_gui_node.py  srv_server_yolov3_node.py  stereo_node.py  stereo_sub_node.py  videocapture_yolov3.py  yolo_openvino.py  yolo_openvino2.py  yolo_openvino3.py  yolo_openvino_copy_gpt.py  yolo_openvino_node.py  yolov10.py  yolov3.py  yolov3_node.py  yolov3_videocapture.py  yolov4_node.py  yolov4_tiny_node.py  yolov8_10_node.py  yolov8s_node.py
hum_det/src/: inference.cc  inference.h  utils.cc  utils.h  yolov10_node.cc  yolov10_node.h
hum_det/srv/: DetModeSwitch.srv  StereoMode.srv
sar/: CMakeLists.txt  package.xml
sar/launch/: engineer_gazebo.launch  engineer_move_base.launch  engineer_rviz.launch  real_engineer_rviz.launch  search.launch  search_rescue.launch  turtlebot3_gazebo.launch  turtlebot3_move_base.launch  turtlebot3_rviz.launch
sar/rviz/: engineer.rviz  real_engineer.rviz
sar/scripts/: rescue_node.py  search_node.py  utils.py
sar/srv/: RescueModeSwitch.srv
sar/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
sar/urdf/sensors/: stereo_camera.gazebo.xacro  stereo_camera.urdf.xacro  wge100_camera.gazebo.xacro  wge100_camera.urdf.xacro
